WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132450
Pause playback on exit fullscreen when inline playback not allowed.
https://bugs.webkit.org/show_bug.cgi?id=132450
Summary
Pause playback on exit fullscreen when inline playback not allowed.
Jeremy Jones
Reported
2014-05-01 16:42:43 PDT
Pause playback on exit fullscreen when inline playback not allowed.
Attachments
Patch
(2.48 KB, patch)
2014-05-01 16:45 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-05-01 16:45:59 PDT
Created
attachment 230628
[details]
Patch
Jer Noble
Comment 2
2014-05-01 17:50:23 PDT
Comment on
attachment 230628
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-05-02 06:52:29 PDT
Comment on
attachment 230628
[details]
Patch Clearing flags on attachment: 230628 Committed
r168169
: <
http://trac.webkit.org/changeset/168169
>
WebKit Commit Bot
Comment 4
2014-05-02 06:52:33 PDT
All reviewed patches have been landed. Closing bug.
Jon Lee
Comment 5
2014-05-05 08:23:38 PDT
<
rdar://problem/16684065
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug