Pause playback on exit fullscreen when inline playback not allowed. https://bugs.webkit.org/show_bug.cgi?id=132450

Reviewed by Jer Noble.

Use correct method of determining if inline playback is allowed.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):
Use m_mediaSession->requiresFullscreenForVideoPlayback to detect if inline playback is allowed.

* platform/ios/WebVideoFullscreenModelMediaElement.mm:
(WebVideoFullscreenModelMediaElement::requestExitFullscreen):
Prevent duplicate exit requests.


Canonical link: https://commits.webkit.org/150501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168169 268f45cc-cd09-0410-ab3c-d52691b4dbfc